@@ -7,8 +7,12 @@ planned as v0.13
   CAUTION: All default values are lost! If you have built a circuit that contains
   test cases that depend on a non-null default value, this tests will fail. To
   resolve this issue, reset the default value.
+- added an enable input to the T flip-flop
+  CAUTION: By default this input is activated now. In circuits which used the T flip-flop
+  in the past, the new input needs to be disabled.
 - A warning message shows up if a circuit with unnamed inputs/outputs is analysed.
-- A warning message shows up if a circuit with missing pin numbers is exported to a hardware-related file.
+- A warning message shows up if a circuit with missing pin numbers is exported to a
+  hardware-related file.
 - Comments are allowed in hex files.
 
 v0.12.1, released on 05. Jun 2016
